# dual-shock4-controller

./: Cargo.toml  README.md
info/: getting_started.md
src/: gamepad.rs  joystick.rs  lib.rs
